--- a/package.json
+++ b/package.json
@@ -1,38 +1,60 @@
 {
-  "name": "tensiflow",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "final-project",
+  "version": "0.0.1",
+  "description": "A review time project",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npm run build-watch & npm run start-server ",
+    "build-watch": "webpack -w",
+    "start-server": "nodemon --watch server -e js,html server/index.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "@tensorflow-models/universal-sentence-encoder": "^1.3.3",
+    "@tensorflow/tfjs": "^3.20.0",
+    "@tensorflow/tfjs-node": "^3.20.0",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "chalk": "^5.0.1",
+    "cors": "^2.8.5",
+    "css-loader": "^6.7.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "less": "^4.1.3",
+    "less-compiler": "^0.2.4",
+    "less-watch-compiler": "^1.16.3",
+    "needle": "^3.1.0",
+    "nodemon": "^2.0.16",
+    "path": "^0.12.7",
+    "pg": "^8.7.3",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-redux": "^v8.0.1",
+    "react-router-dom": "^6.3.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
+    "sequelize": "^6.20.0",
+    "stripe": "^10.12.0-beta.1",
+    "style-loader": "^3.3.1",
+    "svg-url-loader": "^8.0.0",
+    "twitter": "^1.7.1",
+    "twitter-api-sdk": "^1.1.0",
+    "volleyball": "^1.5.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@babel/core": "7.17.10",
+    "@babel/preset-env": "7.17.10",
+    "@babel/preset-react": "7.16.7",
+    "@babel/preset-stage-2": "^7.8.3",
+    "babel-loader": "8.2.5",
+    "file-loader": "^6.2.0",
+    "webpack": "^5.72.0",
+    "webpack-dev-server": "^4.7.3"
   }
 }
