--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pg": "^8.7.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^v8.0.1",
     "react-router-dom": "^6.3.0",
     "redux-logger": "^3.0.6",
